<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#272343"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/QuestionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/question_number"
        android:textAlignment="center"
        android:textColor="#ffa384"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:visibility="invisible">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/selectoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selctedoption"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:visibility="gone">

        </TextView>

        <TextView
            android:id="@+id/CorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correctanswer"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:visibility="gone">

        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="70dp"
        android:gravity="center">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#ffffff"
            android:id="@+id/question"
            android:text="@string/question_1"
            android:textSize="25sp">

        </TextView>


    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/FirstTwoOption"
    android:layout_gravity="center"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/optionA"
        android:text="@string/question1_A"
        android:background="@drawable/optiondesign"
        android:textColor="#272343"
        android:textAlignment="center"
        android:paddingTop="14dp"
        >

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/optionB"
        android:text="@string/question1_B"
        android:background="@drawable/optiondesign"
        android:layout_marginTop="10dp"
        android:textColor="#272343"
        android:textAlignment="center"
        android:paddingTop="14dp"
        >

    </TextView>




</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RemainingTwoOption"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/optionC"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/optiondesign"
            android:paddingTop="14dp"
            android:text="@string/question1_C"
            android:textAlignment="center"
            android:textColor="#272343"
            android:visibility="invisible">

        </TextView>

        <TextView
            android:id="@+id/optionD"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/optiondesign"
            android:paddingTop="14dp"
            android:text="@string/question1_D"
            android:textAlignment="center"
            android:textColor="#272343"
            android:visibility="invisible"
            tools:visibility="invisible">

        </TextView>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/score"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:visibility="invisible" />


        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#ffa384"
            android:indeterminate="false"
            tools:visibility="invisible">

        </ProgressBar>




    </LinearLayout>









</LinearLayout>