<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/pinkcake"
    app:cardCornerRadius="5dp"
    app:cardElevation="15dp"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:text="@string/welcome"
            android:textColor="@color/light"
            android:layout_marginTop="15dp"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:text="@string/date"
            android:textColor="@color/light"
            android:layout_marginTop="15dp"
            android:textSize="20sp" />


        <DatePicker
            android:id="@+id/dpFecha"

            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:headerBackground="#FF91CE"
            android:background="@drawable/date_calendar_background"
            android:datePickerMode="calendar" />


        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"


            android:background="@drawable/button_rounded"
            android:elevation="10dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/conti"

            android:textColor="#FFFFFF"

            android:textSize="25sp" />
    </LinearLayout>



</androidx.cardview.widget.CardView>